fixed csrf fuckery

--- a/Project/electricity-provider/templates/base.html
+++ b/Project/electricity-provider/templates/base.html
@@ -67,7 +67,19 @@
         }
         {% block custom_css %} {% endblock %}
     </style>
+
+
+    <meta name="csrf-token" content="{{ csrf_token }}">
+
+    <script>
+        window.drf = {
+          csrfToken: "{{ csrf_token }}",
+          csrfHeaderName: "X-CSRFToken"
+        };
+    </script>
+
     {% load static %}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="{% static 'rest_framework/js/csrf.js' %}"></script>
 
 </head>
